# render_meshmod

./: CMakeLists.txt  LICENSE  README.md
include/gfx_meshmod/: basicalgos.h  cbagofvectors.h  cdict.h  cvector.h  datacontainer.h  mesh.h  mesh.hpp  meshmod.h  registry.h  tag.h  vertexarray.h
include/gfx_meshmod/data/: aabb.h
include/gfx_meshmod/edge/: halfedge.h
include/gfx_meshmod/polygon/: tribrep.h
include/gfx_meshmod/vertex/: basicdata.h  normal.h  position.h  similar.h  uv.h
include/gfx_meshmod/vertexdata/: position.h
include/render_meshmod/: basicalgos.h  datacontainer.h  handles.h  helpers.h  mesh.h  mesh.hpp  meshmod.h  registry.h
include/render_meshmod/data/: aabb.h
include/render_meshmod/edge/: basicdata.h  endvertex.h  halfedge.h  ring.h  similar.h
include/render_meshmod/polygon/: basicdata.h  convexbrep.h  line.h  planeequation.h  point.h  quadbrep.h  ring.h  tribrep.h
include/render_meshmod/vertex/: basicdata.h  normal.h  position.h  ring.h  similar.h  uv.h  vertex2edges.h
src/: basicalgos.c  cbagofvectors.c  cdict.c  cvector.c  datacontainer.c  datacontainer.h  helpers.c  mesh.c  mesh.h  meshmod.c  meshmod.cpp  registry.c  registry.h  sort.h  tag.c
src/edge/: basicdata.c  default.c  endvertex.c  halfedge.c  ring.c  similar.c
src/gfx_meshmodOLD/: genericcontainters.h  halfedges.cpp  halfedges.h  indextypes.h  mesh.cpp  mesh.h  meshmod.h  polygons.cpp  polygons.h  property.h  scene.h  scenenode.cpp  scenenode.h  sceneobject.h  transform.h  triangle.h  types.h  varicontainer.cpp  varicontainer.h  varielements.h  vertices.cpp  vertices.h
src/gfx_meshmodOLD/halfedgedata/: halfedgecontainers.h  halfedgedata.h
src/gfx_meshmodOLD/materialparameterdata/: materialparameter.h  materialparameterbase.h  materialvertexbindings.h  rgbmaterialparameter.h  scalarmaterialparameter.h  texturematerialparameter.h
src/gfx_meshmodOLD/meshdata/: materialcontainers.h  materialdata.h
src/gfx_meshmodOLD/polygonsdata/: polygoncontainers.h  polygondata.h
src/gfx_meshmodOLD/vertexdata/: colourvertex.h  normalvertex.h  pointrepvertex.h  positionvertex.h  uvvertex.h  vertexcontainers.h  vertexdata.h
src/polygon/: basicdata.c  convexbrep.c  default.c  line.c  planeequation.c  point.c  quadbrep.c  ring.c  tribrep.c
src/vertex/: basicdata.c  default.c  normal.c  position.c  ring.c  similar.c  uv.c  vertex2edges.c
tests/: runner.cpp  test_basicalgos.cpp  test_cbagofvectors.cpp  test_cdict.cpp  test_cvector.cpp  test_datacontainer.cpp  test_helpers.cpp  test_mesh.cpp  test_tag.cpp
